fix: Mobile nav alignment
https://jira.akqa.net/browse/SWW-247

--- a/src/content/dam/wbx/us/images/workspace/styles/_common.scss
+++ b/src/content/dam/wbx/us/images/workspace/styles/_common.scss
@@ -77,7 +77,6 @@
           list-style: none;
           width: 100vw;
           display: flex;
-          justify-content: center;
 
           li {
             margin-right: 34px;
